frame/support/test/tests/benchmark_ui/missing_origin.stderr
error: Single-item extrinsic calls must specify their origin as the first argument.
  --> tests/benchmark_ui/missing_origin.rs:11:3
   |
11 |         #[extrinsic_call]
   |         ^
